wui teacher open student submission tab

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -101,10 +101,6 @@
     </div>
 </script>
 
-<script id="tm-teach-exercise-student-tab" type="text/x-handlebars-template">
-    <a href="#student">{{name}}</a>
-</script>
-
 <script id="tm-teach-exercise-testing-feedback" type="text/x-handlebars-template">
     <h4>Automaatkontrolli hinnang</h4>
     <pre class="feedback auto-feedback">Automaatne tagasiside</pre>
@@ -152,9 +148,9 @@
 <script id="tm-teach-exercise-students" type="text/x-handlebars-template">
     <div class="collection divided-collection">
         {{#students}}
-            <a class="collection-item bb-wrap row" href="#!">
+            <a class="collection-item bb-wrap row" href="#!" data-student-id="{{id}}" data-given-name="{{givenName}}" data-family-name="{{familyName}}">
                 <div class="row">
-                    <span class="col s6">{{name}}</span>
+                    <span class="col s6">{{givenName}} {{familyName}}</span>
                     <span class="col s4 time">{{time}}</span>
                     <span class="col s2 grade">
                        <span {{^evalAuto}}{{^evalTeacher}}{{^evalMissing}}style="margin-right: 34px;"{{/evalMissing}}{{/evalTeacher}}{{/evalAuto}}>{{points}}{{^points}}-{{/points}}/100</span
@@ -223,11 +219,11 @@
     </nav>
     <div id="exercise-card" class="card">
         <div id="tabs-wrap">
-            <ul class="tabs">
+            <ul id="tabs" class="tabs">
                 <li class="tab"><a class="active" href="#exercise">{{exerciseLabel}}</a></li>
                 <li class="tab"><a href="#testing">{{testingLabel}}</a></li>
                 <li class="tab"><a href="#students">{{studentSubmLabel}}</a></li>
-                <li id="tab-student" class="tab"></li>
+                <li class="tab"><a id="tab-student" href="#student"></a></li>
             </ul>
         </div>
         <div class="card-content">
