wui exercise page fetch latest submission

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -234,7 +234,9 @@
             <div id="students">
                 <!-- TODO: placeholder -->
             </div>
-            <div id="student"></div>
+            <div id="student">
+                <!-- TODO: placeholder -->
+            </div>
         </div>
     </div>
 </script>
