--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -148,7 +148,7 @@
 <script id="tm-teach-exercise-students" type="text/x-handlebars-template">
     <div class="collection divided-collection">
         {{#students}}
-            <a class="collection-item bb-wrap row" href="#!" data-student-id="{{id}}" data-given-name="{{givenName}}" data-family-name="{{familyName}}">
+            <a class="collection-item bb-wrap row {{#unstarted}}inactive{{/unstarted}}" {{^unstarted}}href="#!" data-student-id="{{id}}" data-given-name="{{givenName}}" data-family-name="{{familyName}}{{/unstarted}}">
                 <div class="row">
                     <span class="col s6">{{givenName}} {{familyName}}</span>
                     <span class="col s4 time">{{time}}</span>
