--- a/wui/static/participantspoc.html
+++ b/wui/static/participantspoc.html
@@ -15,18 +15,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<style>
-    #content-container {
-        font-size: 1.6rem;
-    }
-    .card .card-content{
-        padding: 5px 10px 0 10px;
-        margin-top: 20px;
-
-    }
-
-
-</style>
 <body>
 
 <header>
@@ -56,90 +44,87 @@
 </header>
 <main>
     <div id="content-container" class="container">
-        <nav class="crumb-wrap">
-            <a href="/courses" class="breadcrumb">Minu kursused</a>
-            <a class="breadcrumb">Lennundus ja aeronautiline hüdraulika</a>
-        </nav>
-        <div class="title-wrap">
-            <h3 class="title">Lennundus ja aeronautiline hüdraulika</h3>
-        </div>
-
-        <h4 class="subsection">Õpetajad</h4>
-
-        <div class="card">
-            <div class="card-content">
-                <table class="responsive-table highlight">
-                    <thead>
-                    <tr>
-                        <th>Nimi</th>
-                        <th>Kasutajanimi</th>
-                        <th>Email</th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-                    <tr>
-                        <td>Sass Maasikas</td>
-                        <td>sass</td>
-                        <td>aaasikas@we.com</td>
-                    </tr>
-                    </tbody>
-                </table>
-
+        <div id="participants-container">
+            <nav class="crumb-wrap">
+                <a href="/courses" class="breadcrumb">Minu kursused</a>
+                <a class="breadcrumb">Lennundus ja aeronautiline hüdraulika</a>
+            </nav>
+            <div class="title-wrap">
+                <h3 class="title">Lennundus ja aeronautiline hüdraulika</h3>
             </div>
 
-        </div>
-        <h4 class="subsection">Õpilased</h4>
-        <div id="students-container" class="card-content">
+            <h4 class="subsection">Õpetajad</h4>
+
+            <div class="card">
+                <div class="card-content">
+                    <table class="responsive-table highlight">
+                        <thead>
+                        <tr>
+                            <th>Nimi</th>
+                            <th>Kasutajanimi</th>
+                            <th>Email</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr>
+                            <td>Sass Maasikas</td>
+                            <td>sass</td>
+                            <td>aaasikas@we.com</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <h4 class="subsection">Õpilased</h4>
+
             <a id="add-students-link" href="#!">Lisa õpilasi</a>
-            <div id="add-students-wrapper">
-                <div id="add-students-help">Õpilaste lisamiseks sisesta kasutajate meiliaadressid
+            <div id="add-students-wrap">
+                <div id="add-students-help">Õpilaste lisamiseks sisesta kasutajate kasutajanimed või meiliaadressid
                     eraldi ridadele või eraldatuna tühikutega.
                 </div>
-                <div id="new-students-list-wrapper" class="row">
+                <div id="new-students-form-wrap" class="row">
                     <div class="input-field col s8">
-                        <textarea id="new-students-list" class="materialize-textarea"
-                                  placeholder="oskar@ohakas.ee  mari@maasikas.ee"></textarea>
-                        <label for="new-students-list">Õpilaste nimekiri</label>
+                        <textarea id="new-students-field" class="materialize-textarea" placeholder="oskar@ohakas.ee &#x0a;marimaasikas"></textarea>
+                        <label for="new-students-field">Õpilaste nimekiri</label>
                     </div>
                     <div class="col s4"></div>
                 </div>
                 <button id="add-students-button" class="waves-effect waves-light btn">Lisa</button>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-                <table class="responsive-table highlight">
-                    <thead>
-                    <tr>
-                        <th>Nimi</th>
-                        <th>Kasutajanimi</th>
-                        <th>Email</th>
-                    </tr>
-                    </thead>
+            <div class="card">
+                <div class="card-content">
+                    <table class="responsive-table highlight">
+                        <thead>
+                        <tr>
+                            <th>Nimi</th>
+                            <th>Kasutajanimi</th>
+                            <th>Email</th>
+                        </tr>
+                        </thead>
 
-                    <tbody>
-                    <tr>
-                        <td>Malle Maasikas</td>
-                        <td>mmaasikas</td>
-                        <td>mallemaaasikas@we.com</td>
-                    </tr>
-                    <tr>
-                        <td>Kalle Saarmas</td>
-                        <td>kalles</td>
-                        <td>kalles@k.ee</td>
-                    </tr>
-                    <tr>
-                        <td>Jaanus Tasuja</td>
-                        <td>tasujajaanus</td>
-                        <td>tasuja@tasuja.ee</td>
-                    </tr>
-                    </tbody>
-                </table>
+                        <tbody>
+                        <tr>
+                            <td>Malle Maasikas</td>
+                            <td>mmaasikas</td>
+                            <td>mallemaaasikas@we.com</td>
+                        </tr>
+                        <tr>
+                            <td>Kalle Saarmas</td>
+                            <td>kalles</td>
+                            <td>kalles@k.ee</td>
+                        </tr>
+                        <tr>
+                            <td>Jaanus Tasuja</td>
+                            <td>tasujajaanus</td>
+                            <td>tasuja@tasuja.ee</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-
-
     </div>
 </main>
 
