wui exercise page add assessment

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -138,8 +138,8 @@
     {{#teacherGrade}}
     <div id="submission-teacher">
         <h4>{{teacherLabel}}</h4>
-        <pre class="feedback">{{teacherFeedback}}</pre>
-        <div>{{teacherGradeLabel}}: <span class="grade-number">{{teacherGrade}}</span>/100</div>
+        <pre id="teacher-feedback" class="feedback">{{teacherFeedback}}</pre>
+        <div>{{teacherGradeLabel}}: <span id="teacher-grade" class="grade-number">{{teacherGrade}}</span>/100</div>
     </div>
     {{/teacherGrade}}
 
