--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -101,10 +101,16 @@
     </div>
 </script>
 
-<script id="tm-teach-exercise-testing-feedback" type="text/x-handlebars-template">
-    <h4>Automaatkontrolli hinnang</h4>
+<script id="tm-exercise-auto-feedback" type="text/x-handlebars-template">
+    <h4>{{autoLabel}}</h4>
     <pre class="feedback auto-feedback">{{feedback}}</pre>
-    <div>Automaatne hinne: <span class="grade-number">{{grade}}</span>/100</div>
+    <div>{{autoGradeLabel}}: <span class="grade-number">{{grade}}</span>/100</div>
+</script>
+
+<script id="tm-exercise-teacher-feedback" type="text/x-handlebars-template">
+    <h4>{{teacherLabel}}</h4>
+    <pre id="teacher-feedback" class="feedback">{{feedback}}</pre>
+    <div>{{teacherGradeLabel}}: <span id="teacher-grade" class="grade-number">{{grade}}</span>/100</div>
 </script>
 
 <script id="tm-teach-exercise-add-grade" type="text/x-handlebars-template">
@@ -127,22 +133,9 @@
 </script>
 
 <script id="tm-teach-exercise-student-submission" type="text/x-handlebars-template">
-    <p id="submission-info"><span class="subheading">Esitamise aeg: </span>{{time}}</p>
-    {{#autoGrade}}
-        <!-- TODO: extract assessment as templates to add afterwards dynamically -->
-    <div id="submission-auto">
-        <h4>{{autoLabel}}</h4>
-        <pre class="feedback auto-feedback">{{autoFeedback}}</pre>
-        <div>{{autoGradeLabel}}: <span class="grade-number">{{autoGrade}}</span>/100</div>
-    </div>
-    {{/autoGrade}}
-    {{#teacherGrade}}
-    <div id="submission-teacher">
-        <h4>{{teacherLabel}}</h4>
-        <pre id="teacher-feedback" class="feedback">{{teacherFeedback}}</pre>
-        <div>{{teacherGradeLabel}}: <span id="teacher-grade" class="grade-number">{{teacherGrade}}</span>/100</div>
-    </div>
-    {{/teacherGrade}}
+    <p id="submission-info"><span class="subheading">{{timeLabel}}: </span>{{time}}</p>
+    <div id="assessment-auto"></div>
+    <div id="assessment-teacher"></div>
 
     <a id="add-grade-link" href="#!">{{{addGradeLink}}}</a>
     <div id="add-grade-section"></div>
@@ -192,7 +185,7 @@
 </script>
 
 <script id="tm-teach-exercise-testing" type="text/x-handlebars-template">
-    <div id="submission-auto"></div>
+    <div id="assessment-auto"></div>
     <div class="editor-wrapper">
         <textarea id="testing-submission"></textarea>
     </div>
@@ -203,13 +196,13 @@
 
 <script id="tm-teach-exercise-summary" type="text/x-handlebars-template">
     <div class="exercise-info">
-        {{#softDeadline}}<p><span class="subheading">Tähtaeg: </span>{{softDeadline}}</p>{{/softDeadline}}
-        {{#hardDeadline}}<p><span class="subheading">Sulgemise aeg: </span>{{hardDeadline}}</p>{{/hardDeadline}}
-        {{#graderType}}<p><span class="subheading">Hindamine: </span>{{graderType}}</p>{{/graderType}}
-        {{#threshold}}<p><span class="subheading">Lävend: </span>{{threshold}}%</p>{{/threshold}}
-        {{#studentVisible}}<p><span class="subheading">Õpilastele nähtav: </span>{{studentVisible}}</p>{{/studentVisible}}
-        {{#assStudentVisible}}<p><span class="subheading">Hinnangud õpilastele nähtavad: </span>{{assStudentVisible}}</p>{{/assStudentVisible}}
-        {{#lastModified}}<p><span class="subheading">Viimati muudetud: </span>{{lastModified}}</p>{{/lastModified}}
+        {{#softDeadline}}<p><span class="subheading">{{softDeadlineLabel}}: </span>{{softDeadline}}</p>{{/softDeadline}}
+        {{#hardDeadline}}<p><span class="subheading">{{hardDeadlineLabel}}: </span>{{hardDeadline}}</p>{{/hardDeadline}}
+        {{#graderType}}<p><span class="subheading">{{graderTypeLabel}}: </span>{{graderType}}</p>{{/graderType}}
+        {{#threshold}}<p><span class="subheading">{{thresholdLabel}}: </span>{{threshold}}%</p>{{/threshold}}
+        {{#studentVisible}}<p><span class="subheading">{{studentVisibleLabel}}: </span>{{studentVisible}}</p>{{/studentVisible}}
+        {{#assStudentVisible}}<p><span class="subheading">{{assStudentVisibleLabel}}: </span>{{assStudentVisible}}</p>{{/assStudentVisible}}
+        {{#lastModified}}<p><span class="subheading">{{lastModifiedLabel}}: </span>{{lastModified}}</p>{{/lastModified}}
     </div>
     <div>
         <h2>{{exerciseTitle}}</h2>
