wui add #exercise-text to exercise text for custom styling

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -206,7 +206,7 @@
     </div>
     <div>
         <h2>{{exerciseTitle}}</h2>
-        <div>{{{exerciseText}}}</div>
+        <div id="exercise-text">{{{exerciseText}}}</div>
     </div>
 </script>
 
@@ -264,7 +264,7 @@
     </div>
     <div>
         <h2>{{title}}</h2>
-        <div>{{{text}}}</div>
+        <div id="exercise-text">{{{text}}}</div>
     </div>
 </script>
 
