EZ-1009 paint role suffix for persisted non-main roles & refactor navbar role switching

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -49,7 +49,7 @@
             <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
                 <a href="#!">
                     <i id="profile-logo" class="left material-icons">account_circle</i>
-                    <span id="profile-name">{{userName}}</span><span id="profile-role"></span>
+                    <span id="profile-name">{{userName}}{{roleIndicator}}</span>
                 </a>
             </div>
         </div>
