EZ-1069 integrate full page loading animation

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -24,15 +24,23 @@
     <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body>
-
-<div id="nav-wrap"></div>
-<div id="sidenav-wrap"></div>
-
-
-<div id="content-container" class="container">
-    Loading...
-</div>
+<body style="background-color: #eee">
+<header>
+</header>
+<main>
+    <div class="loading-full-page">
+        <div class="loading-wrap">
+            <div class="antennaball"></div>
+            <div class="antenna"></div>
+            <div class="robot">
+                <div class="robot-eye"></div>
+                <div class="robot-eye"></div>
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
+</footer>
 
 
 <!-- Templates -->
